personal website updated

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
      <div class="container">
       <div class="row align-item-centre">
         <div class="col-md-6 col-2">
-          <img src="images/photo_2023-10-12_01-26-07.jpg" class="rounded-circle" width="420" height="400" alt="" class="image-fluid" style="border: 4px solid darkblue;">
+          <img src="images/photo_2023-10-12_01-26-07.jpg" class="rounded-circle" width="410" height="400" alt="" class="image-fluid" style="border: 4px solid rgb(71, 71, 215);">
         </div>
         <div class="col-md-6 col-12">
         <form>
@@ -65,12 +65,12 @@
     </section>
 
     <section class="bg-light" id="education-section">
-      <div class="container pt-3">
-        <h1 class="text-center">Education</h1>
+      <div class="container mt-3">
+        <h1 class="text-center mt-2">Education</h1>
         <div class="row pt-4  ">
           <div class="col-md-4 col-12 pt-3 ">
             <div class="card text-center p-2" style=" border:3px solid;border-radius:9px; height:10">
-              <img class="card-img-top" src="https://scontent.fcok10-4.fna.fbcdn.net/v/t1.6435-9/75543641_100146171471533_3002531973580193792_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=be3454&_nc_ohc=3JaQh0oXVAoAX-E5Dza&_nc_ht=scontent.fcok10-4.fna&oh=00_AfCn9xfDBTbg3NlglMVlOdnYqWhpRUEe0w4j3gh_SCxvLg&oe=654E86C8" alt="" style="height:13.5em;">
+              <img class="card-img-top" src="images/lkrps.jpg" alt="" style="height:13.5em;">
               <div class="card-body">
                 <h5 class="card-title">Lord Krishna Residential Public School</h5>
                 <h5 class="card-text">Central Board of Secondary Education</h5>
@@ -80,7 +80,7 @@
           </div>
           <div class="col-md-4 col-12 pt-3">
             <div class="card text-center p-2" style=" border:3px solid;border-radius:9px;">
-              <img class="card-img-top" src="https://scontent.fcok10-1.fna.fbcdn.net/v/t31.18172-8/1553222_241075196075218_259735710_o.jpg?_nc_cat=107&ccb=1-7&_nc_sid=c2f564&_nc_ohc=iPAVXhwVJOsAX_r_3Bw&_nc_ht=scontent.fcok10-1.fna&oh=00_AfBQ5bwqXybHxcLPV9SekwRAJbg9VD4jobcA0vG2PgVPsw&oe=654E9ADF" alt="" style="height:16.3em;">
+              <img class="card-img-top" src="images/ghss.jpg" alt="" style="height:16.3em;">
               <div class="card-body">
                 <h5 class="card-title">G.H.S.S Nedungolam</h5>
                 <h5 class="card-text">Course : Computer Science</h5>
@@ -215,15 +215,40 @@
                           </div>
                           </div>
                      </div>
+                     <div class="col-md-4 col-12 pt-3">
+                      <div class="card text-center p-2" style=" border:3px solid;border-radius:9px;">
+                        <img class="card-img-top" src="https://community-cdn-digitalocean-com.global.ssl.fastly.net/4CUuvmgrC4Cunov15s1GeQp9" alt="" style="height:10em;">
+                        <div class="card-body">
+                          <h5 class="card-title">MongoDB </h5>
+                          <h5 class="card-text">Proficiency</h5>
+                          <div class="mt-3 text-center">
+                            <div class="progress-bar progress-bar-striped progress-bar-animated text-dark fw-bold" style="width:70%">70%</div>
+                          </div>
+                          </div>
+                          </div>
+                     </div>
+                     <div class="col-md-4 col-12 pt-3">
+                      <div class="card text-center p-2" style=" border:3px solid;border-radius:9px;">
+                        <img class="card-img-top" src="https://pbs.twimg.com/media/Eq05ju9XAAApCoM.jpg:large" alt="" style="height:10em;">
+                        <div class="card-body">
+                          <h5 class="card-title">Django Framework</h5>
+                          <h5 class="card-text">Proficiency</h5>
+                          <div class="mt-3 text-center">
+                            <div class="progress-bar progress-bar-striped progress-bar-animated text-dark fw-bold" style="width:70%">70%</div>
+                          </div>
+                          </div>
+                          </div>
+                     </div>
+                      
                </div>
               </div>
            </div>
         </section>
 
-        <Section class="bg-light" id="contact-section">
+        <Section class="bg-light mt-3" id="contact-section">
           <div class="container">
           <h1 class="text-center">Contact</h1>
-          <div class="row pt-4">
+          <div class="row pt-3">
             <div class="col-md-12">
               <form id="form-contact">
                 <div class="form-row">
